[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-tool-regression-ci"
version = "0.1.0"
description = "Local-first CI harness for prompt and tool-call regression testing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.6.0",
  "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
prompt-tool-regression-ci = "prompt_tool_regression_ci.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_tool_regression_ci"]
artifacts = ["src/prompt_tool_regression_ci/web_assets/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
